k8s-manifests/Gateway API/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: subbu-1-ns
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
