k8s-manifests/Gateway API/usernode-js-service.yml
apiVersion: v1
kind: Service
metadata:
  name: usernode-js-service
  namespace: subbu-1-ns
spec:
  type: ClusterIP  # Use NodePort if LoadBalancer is not supported
  ports:
    - port: 3130
      targetPort: 3130
      protocol: TCP
  selector:
    app: userprofile
